<?xml version="1.0"?>
<package format="3">
  <name>particle_filter_localization</name>
  <version>0.0.0</version>
  <description>The particle_filter_localization package</description>

  <maintainer email="rottertarmenation.y11.r18@gmail.com">RyuYamamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_sim_msgs</depend>
  <depend>nav_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
